[project]
name = "pybullet_robot"
version = "0.1.4"
description = "A generel Python interface class for robot simulations using PyBullet. Also provides an IK interface for multi-end-effector robots that uses bullet physics as a solver."
readme = "README.md"
authors = [{ name = "Saif Sidhik", email = "mail@saifsidhik.page" }]
requires-python = ">= 3.10"
dependencies = [
    "robot-descriptions>=1.11.0,<2",
    "numpy>=1.6,<3",
    "scipy>=1.14.0,<2",
    "pybullet>=3.2.6,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pybullet_robot = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10"

[tool.pixi.tasks]
ci = "black . && ruff check . --fix && pylint $(git ls-files '*.py') && pytest"

demo_task_space = "python3 ./examples/demo_task_space_control.py"
demo_impedance = "python3 ./examples/demo_task_space_control.py"


#LINTING OPTIONS

[tool.pylint.'MESSAGES CONTROL']
disable = "C,logging-fstring-interpolation,line-too-long,fixme,broad-exception-caught,missing-module-docstring,too-many-instance-attributes,too-few-public-methods,too-many-arguments,too-many-locals,too-many-branches,too-many-statements,use-dict-literal,cyclic-import,duplicate-code,too-many-public-methods"

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]